--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -1,8 +1,10 @@
 # Introduction to Indonesian labor force survey – Survei Angkatan Kerja Nasional (SAKERNAS)
 
+
 ## What is the IDN SAKERNAS?
 
 The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS) and then it was separated from SUSENAS and conducted quarterly since 1986. 
+
 
 ## What does the IDN SAKERNAS cover?
 
@@ -50,6 +52,7 @@ Note that even though SAKERNAS is a household-based survey and it indeed has hou
 
 The microdata of SAKERNAS are not publicly available. The raw data we used were acquired by filling in a data request form and then shared by the World Bank Indonesia Team. 
 
+
 ## What is the sampling procedure?
 
 SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (in cluding 2007) have representativeness untill district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data* (
@@ -95,7 +98,7 @@ systematic random sampling.
 
 ```    
   
-
+  
 ## What is the geographic significance level?
 
 The official reports detail results by gender, sector (urban and rural etc.), province, and district(or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
@@ -135,7 +138,7 @@ Here is a table listing all the 34 provinces in Indonesia since 2015 till now, u
 | **72** | **SULAWESI TENGAH**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes    | 
 | **73** | **SULAWESI SELATAN**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes   |  
 | **74** | **SULAWESI TENGGARA**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes  |
-| **75** | **GORONTALO**         |  2001-2019               | Split from SULAWESI UTARA |
+| **75** | **GORONTALO**         |  2001-2019               | Split from SULAWESI UTARA in 2000 |
 | **76** | **SULAWESI BARAT**        |  2006-2019               | Split from SULAWESI SELATAN in 2004   | 
 | **81** | **MALUKU**        |  1989-1990, 1992, 1994-1999，2001-2019               | Unconventional province codes | 
 | **82** | **MALUKU UTARA**         |  1989-1990, 1992, 1994-2019               | Unconventional province codes | 
@@ -146,6 +149,7 @@ Here is a table listing all the 34 provinces in Indonesia since 2015 till now, u
 
 
 ## Other noteworthy aspects
+
 
 ### Unique Household ID Generation
 
@@ -181,6 +185,6 @@ Another thing worth pointing out is that the age required for education and labo
 
 ### Coding of industry and occupation codes
 
-The QLFS of all years codes industry based on the [Standard Industrial Classification of All Economic Activities, Fifth Edition (SIC 5)](http://www.statssa.gov.za/additional_services/sic/contents.htm), which is based upon the third revision of the International Standard Industrial Classification of all Economic Activities (ISIC Rev. 3) published in 1990.
+Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Correspondence_National_International_Classifications) 
 
-Regarding occupational classification, all QLFS years code occupation based on [South African Standard Classification of Occupations published in 2003 (SASCO 2003)](http://www.statssa.gov.za/classifications/codelists/SASCO_2003.pdf), which is based on the United Nations' International Standard Classification of Occupations (ISCO-88). The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/ZAF/QLFS/Correspondence_National_International_Classifications.md).
+Occupational classification is even more difficult than industrial to be mapped to ISCO. 4 versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a corespondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classfication for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
