Country_survey_details_IDN

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -8,9 +8,9 @@ The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) i
 
 ## What does the IDN SAKERNAS cover?
 
-The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activitiesover the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers indiciduals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two versions of SAKERNAS available for harmonization, Feburary round and August round. We used the one with the larger sample size, which usually would be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
+The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
 
-The years and sample size of SAKERNAS harmonized for GLD are: 
+Years and sample size of SAKERNAS harmonized for GLD are: 
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	|
@@ -45,7 +45,7 @@ The years and sample size of SAKERNAS harmonized for GLD are:
 | 2018  | N/A        | 508,460        |  194,779,441     |
 | 2019  | N/A        | 782,789        |  197,911,777     |
 
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of households are not available (N/A) in the form above for those years without household IDs.
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of household are not available (N/A) in the form above for those years without household IDs.
 
 
 ## Where can the data be found?
@@ -101,9 +101,11 @@ systematic random sampling.
   
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (urban and rural etc.), province, and district(or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
+The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
 
-Quite a few historical changes happened to administrative divisions in Indonesia during the time period of interest considering the long duration. The provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time, which are noted as "*Unconventional province codes*" below. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
+Quite a few historical changes happened to administrative divisions in Indonesia during the time period of interest considering the long duration. The provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time, which are noted as "*Unconventional province codes*" below. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
+
+One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts.  
 
 Here is a table listing all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
 
@@ -153,11 +155,11 @@ Here is a table listing all the 34 provinces in Indonesia since 2015 till now, u
 
 ### Unique Household ID Generation
 
-Household IDs are not directly available in SAKERNAS regardless of year. Location identifiers such as province, district, sector (urban or rural) etc. can be used to generate household IDs. However, these location identifiers are necessarily fully available in all survey years. We created household IDs using STATA codes provided by the *The Guide* for years that have the full list of location identifiers required.
+Household IDs are not directly available in SAKERNAS regardless of year. Location identifiers such as province, district, sector (urban or rural) etc. can be used to generate household IDs. However, these location identifiers are not necessarily fully available in all survey years. We created household IDs using STATA codes provided by the *The Guide* for years that have the full list of location identifiers required.
 
 ![STATA_HHID_codes](https://user-images.githubusercontent.com/84488698/163726938-8dfafff8-f195-442f-bef7-6f3a9f9843f9.png)
 
-Household IDs were only created if 1) the given year has the full list of identifiers and 2) the number of households generated using this method matches the household sample size in *The Guide*. Because *The Guide* only provides a range of household sample size for several years in rounded number, it is possible that our self-created household number is not equal to the exact number of household in a specific year. The table below shows the availability of location identifiers in each year and if have hosehold ID.  
+Household IDs were only created if 1) the given year has the full list of identifiers and 2) the number of households generated using this method matches the household sample size in *The Guide*. Because *The Guide* only provides a range of household sample size for several years in rounded number, it is possible that our self-created household number is not equal to the exact number of household in a specific year. The table below shows the availability of location identifiers in each year and if they have household ID.  
 
 | **Year**	    | **Location Identifiers Available**	| **HHID created?** | 
 | :-------:	 | :------------------------------: | :-----------: | 
@@ -172,7 +174,7 @@ Household IDs were only created if 1) the given year has the full list of identi
 
 ### Definition of Labor Status and Labor Force Participation
 
-From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understand the intention and the logic of the questions and kade adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
+From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
 
 All the harmonized years can be grouped into three categories: 
 
@@ -187,4 +189,4 @@ Another thing worth pointing out is that the age required for education and labo
 
 Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Correspondence_National_International_Classifications) 
 
-Occupational classification is even more difficult than industrial to be mapped to ISCO. 4 versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a corespondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classfication for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
+Occupational classification is even more difficult than industrial to be mapped to ISCO. 4 versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a correspondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classification for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
