Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -187,6 +187,6 @@ Another thing worth pointing out is that the age required for education and labo
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Correspondence_National_International_Classifications) 
+Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document.](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Correspondence_National_International_Classifications) 
 
 Occupational classification is even more difficult than industrial to be mapped to ISCO. 4 versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a correspondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classification for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
