--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -178,9 +178,9 @@ From 1989 to 2019, the structure of SAKERNAS, especially the labor force module 
 
 All the harmonized years can be grouped into three categories: 
 
-1) 1989-1999: the questionnaires of these years follow the same structure and have the same labor force module questions. Simply following the order of the questions can locate all the conditions needed to decide the employed, the unemployed, non-labor force population. 
+1) 1989-1999: the questionnaires of these years follow the same structure and have the same labor force module questions. Simply following the order of the questions can locate all the conditions needed to decide the employed, the unemployed, and non-labor force population. 
 2) 2000-2016：the labor force module has become more complete and questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
-3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. But meanwhile as question block increases, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
+3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. But meanwhile as question block increases and expands, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
 
 Another thing worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
 
