--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -3,12 +3,12 @@
 
 ## What is the IDN SAKERNAS?
 
-The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS) and then it was separated from SUSENAS and conducted quarterly since 1986. 
+The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS). It was separated from SUSENAS and conducted quarterly since 1986. 
 
 
 ## What does the IDN SAKERNAS cover?
 
-The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
+The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In recent years (i.e., 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
 
 Years and sample size of SAKERNAS harmonized for GLD are: 
 
@@ -45,7 +45,7 @@ Years and sample size of SAKERNAS harmonized for GLD are:
 | 2018  | N/A        | 508,460        |  194,779,441     |
 | 2019  | N/A        | 782,789        |  197,911,777     |
 
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of household are not available (N/A) in the form above for those years without household IDs.
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. In those years, the methodology does also not allow for the creation of household level estimates. Therefore, numbers of household are not available (N/A) in the table above for those years without household IDs.
 
 
 ## Where can the data be found?
@@ -55,7 +55,7 @@ The microdata of SAKERNAS are not publicly available. The raw data we used were 
 
 ## What is the sampling procedure?
 
-SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (in cluding 2007) have representativeness untill district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data* (
+SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (including 2007) have representativeness at district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data* (
 hereinafter referred to as *The Guide*),  written by the Poverty Global Practice of the World Bank Group outlines the sampling procedure as:
    
 ```
@@ -107,7 +107,7 @@ Quite a few historical changes happened to administrative divisions in Indonesia
 
 One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts.  
 
-Here is a table listing all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
+The below table lists all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
 
 |   **Code**   | **Province** | **Year of Appearance** | **Reason for Exclusion** |
 | :------: | :------: | :-------------: | :-----: | 
@@ -174,19 +174,19 @@ Household IDs were only created if 1) the given year has the full list of identi
 
 ### Definition of Labor Status and Labor Force Participation
 
-From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
+From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. A more comprehensive explanations of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
 All the harmonized years can be grouped into three categories: 
 
 1) 1989-1999: the questionnaires of these years follow the same structure and have the same labor force module questions. Simply following the order of the questions can locate all the conditions needed to decide the employed, the unemployed, and non-labor force population. 
-2) 2000-2016：the labor force module has become more complete and questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
-3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. But meanwhile as question block increases and expands, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
+2) 2000-2016：the labor force module has become more complete (and complex). Questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
+3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. Yet, while the block on employment status question increases and expands, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
 
-Another thing worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
+Finally, it is worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
 
 
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document.](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Correspondence_National_International_Classifications) 
+Regarding industrial classification, 6 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1990, KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. So far, we have only mapped years using KBLI2015 and KBLI2009 to their ISIC counterparts. The difficulty of mapping industry code comes from 1) lack of guidebook on each of these KBLI versions as well as the correspondence table among themselves; 2) lack of correspondence between KBLI and ISIC (except KBLI2015 and KBLI2009); 3) incomplete industrial coding in the raw datasets. Although most SAKERNAS provide several versions of industrial classification in a given year's raw dataset, in most cases, these variables do not have value labels indicating the industry names, which could not be made of use. Details about mapping KBLI2015 and KBLI2009 to ISIC are covered in the [separate document.](Correspondence_National_International_Classifications) 
 
-Occupational classification is even more difficult than industrial to be mapped to ISCO. 4 versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a correspondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classification for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
+Occupational classification is even more difficult than industrial to be mapped to the International Standard Classification of Occupations (ISCO). Four versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014. However, without instructions on each version of occupational codes and how they correspond to ISCO codes, it is hard to develop a correspondence table for the mapping for all years. Therefore, we only provided the one-digit occupational classification for `occup` when KBJI2002 is available and the original occupational code with the most digits in the raw dataset.   
