--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -174,7 +174,7 @@ Household IDs were only created if 1) the given year has the full list of identi
 
 ### Definition of Labor Status and Labor Force Participation
 
-From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. A more comprehensive explanations of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
+From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog) ([here](utilities/IDN_2015_LFS_AUG_Report.pdf) is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
 All the harmonized years can be grouped into three categories: 
 
@@ -182,7 +182,7 @@ All the harmonized years can be grouped into three categories:
 2) 2000-2016：the labor force module has become more complete (and complex). Questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
 3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. Yet, while the block on employment status question increases and expands, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
 
-Finally, it is worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
+Finally, it is worth pointing out that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
 
 
 ### Coding of industry and occupation codes
