--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -11,13 +11,13 @@
 
 ## What is the EGY LFS?
 
-The EGY LFS XXX
-
- 
+The EGY LFS is a quarterly survey collected by the Egypcian Central Agency for Public Mobilization and Statistics (CAPMAS). The data used by GLD is the cleaned and harmonized version of the survey data produced and published by the economic research forum (ERF). 
 
 ## What does the EGY LFS cover?
 
-The EGY LFS contains information on demographic details (age, gender, location), education (academic), migration, labour market activities over the last 7 days, as well as hours worked and activities over the previous 7 days. The harmonized years and sample sizes used in the GLD harmonization are:
+The EGY LFS contains data on the size of manpower and labor force (employed and unemployed) and the geographical distribution by characteristics i.e (gender, age, education,and economic activity). 
+
+The harmonized years and sample sizes used in the GLD harmonization are:
 
 | Year	| # of Households	| # of Individuals	|
 | :-------	| :--------		| :--------	 	|
@@ -38,17 +38,34 @@ The EGY LFS contains information on demographic details (age, gender, location),
 
 ## Where can the data be found?
 
-The  datasets are available to the public throgh a request form (see here), the researcher/analyst has to contact xxx through theIR  [website](). The World Bank has been granted access to the datasets, if you work for the World Bank Group, kindly contact the Jobs Group with a formal request for access to [gld@worldbank.org](gld@worldbank.org).
+The  datasets are available to the public throgh a request form in the microdata section of each LFS, the researcher/analyst has to contact xxx through the ERF [website](http://www.erfdataportal.com/index.php/catalog/146). The World Bank has been granted access to the datasets, if you work for the World Bank Group, kindly contact the Jobs Group with a formal request for access to [gld@worldbank.org](gld@worldbank.org).
 
 ## What is the sampling procedure?
 
-The LFS is designed as a xxx
-
+The LFS is designed following the simple systematic random sampling procedure. Details on it can be found in the annual aggregated bulleting which is part of the [documentation](http://www.erfdataportal.com/index.php/catalog/141/related-materials) the ERF data sets (information in Arabic).
 
 
 ## What is the geographic significance level?
 
+The data covers a sample of urban and rural in all egyptian governorates (27 or 29 ). Each year the list of geographic locations below governorates changes to dismiss or include existent cities or new cities. Below a summary of the changes that the user may encounter. 
 
+| Year	| Total subnatid1	|
+| :-------	| :--------		|
+| 2006-2008	| 27	|
+| 2009-2010	| 29	|
+| 2011-2019	| 27 |
 
+| Year	| Total subnatid2	|
+| :-------	| :--------		|
+| 2006-2007	| 269	|
+| 2008 | 273 |
+| 2009	| 271 |
+| 2010	| 299 |
+| 2012,2014	| 295 |
+| 2013,2017	| 293 |
+| 2015	| 294 |
+| 2018	| 305 |
+| 2011, 2016, 2019	| N/A |
 
 ## Other noteworthy aspects
+N/A
