--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -68,4 +68,11 @@ The data covers a sample of urban and rural in all egyptian governorates (27 or 
 | 2011, 2016, 2019	| N/A |
 
 ## Other noteworthy aspects
-N/A
+
+### ISCO and ISIC Classification
+
+The data already included the occupation and economic activities in the international version of the the ISCO -88 and ISIC REV 4. Thus, the GLD harmonized data only called the results from the main source with no major changes or shifts in the groups structures. Note that only from 2009 onwards there is documentation the isco / isic;   the user has to assert the version idependently for other data.
+
+
+
+
