--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -71,7 +71,7 @@ The data covers a sample of urban and rural in all egyptian governorates (27 or 
 
 ### ISCO and ISIC Classification
 
-The data already included the occupation and economic activities in the international version of the the ISCO -88 and ISIC REV 4. Thus, the GLD harmonized data only called the results from the main source with no major changes or shifts in the groups structures. Note that only from 2009 onwards there is documentation the isco / isic;   the user has to assert the version idependently for other data.
+The data already included the occupation and economic activities in the international version of the the ISCO -88 for all the years. Between 2006-2008 ISIC rev 3 was used and 2010-2019 ISIC Rev 4. Thus, the GLD harmonized data only called the results from the main source with no major changes or shifts in the groups structures. Note that only from 2009 onwards there is documentation the isco / isic;   the user has to assert the version idependently for other data.
 
 
 
