Editing and review of CSD Egypt
Small changes in editing, changing links
Added a section on changes in governorates that I kindly ask to be expanded

--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -11,7 +11,7 @@
 
 ## What is the EGY LFS?
 
-The EGY LFS is a quarterly survey collected by the Egypcian Central Agency for Public Mobilization and Statistics (CAPMAS). The data used by GLD is the cleaned and harmonized version of the survey data produced and published by the economic research forum (ERF). 
+The EGY LFS is a quarterly survey collected by the Egypcian Central Agency for Public Mobilization and Statistics (CAPMAS). The data used by GLD is the cleaned and harmonized version of the survey data produced and published by the Economic Research Forum (ERF) [on their microdata catalogue](http://www.erfdataportal.com/index.php/catalog). 
 
 ## What does the EGY LFS cover?
 
@@ -38,7 +38,7 @@ The harmonized years and sample sizes used in the GLD harmonization are:
 
 ## Where can the data be found?
 
-The  datasets are available to the public throgh a request form in the microdata section of each LFS, the researcher/analyst has to contact xxx through the ERF [website](http://www.erfdataportal.com/index.php/catalog/146). The World Bank has been granted access to the datasets, if you work for the World Bank Group, kindly contact the Jobs Group with a formal request for access to [gld@worldbank.org](gld@worldbank.org).
+TThe LFS data for Egypt can be found on the [ERF Data Catalogue site](http://www.erfdataportal.com/index.php/catalog#_r=&collection=HLFS&country=225&dtype=&from=1963&page=1&ps=&sid=&sk=&sort_by=nation&sort_order=&to=2021&topic=&view=s&vk=). To obtain the data, users need to create and account and then request the data, by filling out the forms that will appear on the site. If users are not granted the data within two-weeks’ time it is recommended to try to reach out to ERF to inquire about the process. The World Bank has been granted access to the datasets, if you work for the World Bank Group, kindly contact the Jobs Group with a formal request for access to [gld@worldbank.org](gld@worldbank.org).
 
 ## What is the sampling procedure?
 
@@ -49,13 +49,13 @@ The LFS is designed following the simple systematic random sampling procedure. D
 
 The data covers a sample of urban and rural in all egyptian governorates (27 or 29 ). Each year the list of geographic locations below governorates changes to dismiss or include existent cities or new cities. Below a summary of the changes that the user may encounter. 
 
-| Year	| Total subnatid1	|
+| Year	| # of governorates (subnatid1)	|
 | :-------	| :--------		|
 | 2006-2008	| 27	|
 | 2009-2010	| 29	|
 | 2011-2019	| 27 |
 
-| Year	| Total subnatid2	|
+| Year	| # Municipal divisions (subnatid2)	|
 | :-------	| :--------		|
 | 2006-2007	| 269	|
 | 2008 | 273 |
@@ -72,6 +72,10 @@ The data covers a sample of urban and rural in all egyptian governorates (27 or 
 ### ISCO and ISIC Classification
 
 The data already included the occupation and economic activities in the international version of the the ISCO -88 for all the years. Between 2006-2008 ISIC rev 3 was used and 2010-2019 ISIC Rev 4. Thus, the GLD harmonized data only called the results from the main source with no major changes or shifts in the groups structures. Note that only from 2009 onwards there is documentation the isco / isic;   the user has to assert the version idependently for other data.
+
+### Changes in governorates
+
+In the years 2008, X new governorates where created. Which ones, what is the matrix of relations -> Result of cross tabulating subnatid1 and subnatid1_prev
 
 
 
