--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -75,8 +75,11 @@ The data already included the occupation and economic activities in the internat
 
 ### Changes in governorates
 
-In the years 2008, X new governorates where created. Which ones, what is the matrix of relations -> Result of cross tabulating subnatid1 and subnatid1_prev
+In the years 2008, 2 new governorates (Helwan and 6th of Ocotber) where created one from Cairo and other from Giza Governorates. In 2011, the governorates are re absorved by Cairo and Giza. Below we show the correspondance matrix. 
 
+<br></br>
+![subnat](utilities/subnat.PNG)
+<br></br>
 
 
 
