--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -81,5 +81,5 @@ In the years 2008, 2 new governorates (Helwan and 6th of Ocotber) where created 
 ![subnat](utilities/subnat.PNG)
 <br></br>
 
-
+Sources: [Helwan](https://en.wikipedia.org/wiki/Helwan_Governorate) & [6th of October](https://en.wikipedia.org/wiki/6th_of_October_Governorate#:~:text=The%206th%20of%20October%20Governorate%20was%20split%20from%20the%20Giza,Egypt's%20most%20densely%20populated%20governorates.)
 
