--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -75,7 +75,7 @@ The data already included the occupation and economic activities in the internat
 
 ### Changes in governorates
 
-In the years 2008, 2 new governorates (Helwan and 6th of Ocotber) where created one from Cairo and other from Giza Governorates. In 2011, the governorates are re absorved by Cairo and Giza. Below we show the correspondance matrix. 
+In the years 2008, 2 new governorates (Helwan and 6th of Ocotber) where created one from Cairo and other from Giza Governorates. In 2011, the governorates are re absorved by Cairo and Giza. Below we show the correspondance matrix. The GLD team cannot decide which districts in 2011 were part of the new governorates, however the team is happy to exchange correspondace with researchers that have information on this, kindly direct your communications to [gld@worldbank.org](gld@worldbank.org).
 
 <br></br>
 ![subnat](utilities/subnat.PNG)
