--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -3,12 +3,14 @@
 
 ## What is the IDN SAKERNAS?
 
-The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS). It was separated from SUSENAS and conducted quarterly since 1986. 
+The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS). It was separated from SUSENAS and conducted quarterly since 1986. 
 
 
 ## What does the IDN SAKERNAS cover?
 
-The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In recent years (i.e., 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
+The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In recent years (i.e., 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. 
+
+Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
 
 Years and sample size of SAKERNAS harmonized for GLD are: 
 
@@ -50,7 +52,8 @@ Note that even though SAKERNAS is a household-based survey and it indeed has hou
 
 ## Where can the data be found?
 
-The microdata of SAKERNAS are not publicly available. The raw data we used were acquired by filling in a data request form and then shared by the World Bank Indonesia Team. 
+The microdata of SAKERNAS are not publicly available. The raw data we used were acquired by filling in a data request form and then shared by the World Bank Indonesia Team. Data can also be purchased from the BPS' Statistics Service Information System ([link here](https://silastik.bps.go.id/v3/index.php/site/login/) - requires login)
+
 
 
 ## What is the sampling procedure?
