--- a/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/ZAF/QLFS/1. Introduction to QLFS.md
@@ -163,5 +163,5 @@ Year 2012 and 2016 need special attention. Using LMDSA alone for these two years
 
 Note that the QLFS since March 2020 has switched from face-to-face interview to Computer Assisted Telephone Interviewing (CATI). Accordingly, sample size was affected by the availability of contacts of the dwelling units. Therefore, according to the QLFS Q2report, it is recommended to cautiously make comparisons with previous quarters. More details about quarterly data collection in 2020 below from a screenshot of 2020 Q2 report:
 
-![QLFS_2020_Q2_report.](utilities/QLFS_2020_Q2_report)
+![QLFS_2020_Q2_report.](utilities/QLFS_2020_Q2_report.png)
 ### 
